re-factored, eliminated O(n) searh for the transmission tab

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "transmission-web-helper", 
     "license": "MPL 2.0", 
     "author": "Jeff Griffiths",
-    "version": "0.1", 
+    "version": "0.3", 
     "fullName": "transmission-web-helper", 
     "id": "transmission-web-helper@canuckistani.ca", 
     "description": "a basic add-on", 
@@ -10,7 +10,7 @@
     	"name": "transmission_url",
     	"title": "URL for Transmission RPC",
     	"type": "string",
-    	"value": "http://10.0.0.99:9091/transmission/rpc"
+    	"value": "http://localhost:9091/transmission/rpc"
     },
     {
     	"name": "transmission_autostart",
